--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 								<dd><a href="mailto:info@vsechnovcloudu.cz">info@vsechnovcloudu.cz</a></dd>
 							</dl>
 							<ul class="icons">
-								<li><a href="https://vsechnovcloudu.slack.com" class="icon fa-slack alt"><span class="label">Slack</span></a></li>
+								<li><a href="https://join.slack.com/t/vsechnovcloudu/shared_invite/enQtMzcwMjE4MTgxNjQ5LTNjOWVjZjIwNDMyYjI3YjU0NmI0MmI5YjQzZjMwNzMxNmQ5ZTJjYmYyMjAyMmU3MGZlMDRhYWQwMWJhMjIyMTY" class="icon fa-slack alt"><span class="label">Slack</span></a></li>
 								<li><a href="https://www.facebook.com/vsechnovcloudu/" class="icon fa-facebook alt"><span class="label">Facebook</span></a></li>
 								<li><a href="https://github.com/vsechnovcloudu" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
 								<li><a href="https://plus.google.com/u/0/b/104173399245736550114/" class="icon fa-google-plus alt"><span class="label">Google Plus</span></a></li>
