Added example video.

--- a/skoleni.html
+++ b/skoleni.html
@@ -39,6 +39,9 @@
 								<p>Ať už se bude toto školení odehrávat v našich anebo ve vaších prostorách, je nutné s sebou mít laptop s admin root právy, jelikož pro každé téma je připravená série interaktivních cvičení v reálném prostředí AWS, kde si všechny elementy vyzkoušíte naživo.</p>
 								<h2>Pro koho je produkt určen</h2>
 								<p>Developeři, solution architekti, operátoři, systémoví a databázoví administrátoři.</p>
+								<h2>Ukázka</h2>
+								<p>Pro lepší představu o formě našich školení si můžete pustit krátkou ukázku. Tématem je využití služby STS pro oddělení účtů během deploymentu do cílového prostředí. Ukazujeme nejen jak nastavit role a politiky, ale také vysvětlujeme praktický dopad na denní práci Vašich týmů.</p>
+								<p align="center"><iframe width="560" height="315" src="https://www.youtube.com/embed/SIGoQnUYatI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>
 								<h3>AWS crash course</h3>
 								<p>Třídenní školení, během kterého se naučíte základy Well Architected Framework a naučíte se ho implementovat. Školení je určeno především pro lidi s minimální zkušeností s AWS cloudem. Pokud plánujete přechod ze standardní three tier aplikace či potřebujete zaškolit lidi do již existujícího AWS prostředí, tento kurz zajišťuje nezbytné minimum znalostí pro plnohodnotnou práci. Na Vaše přání výuku prodloužíme a rozšíříme o další témata anebo naopak zkrátíme a soustředíme na pro vás relevantní body.</p>
 								<h4>Osnova</h4>
@@ -115,7 +118,7 @@
 									<dd><a href="mailto:info@vsechnovcloudu.cz">info@vsechnovcloudu.cz</a></dd>
 								</dl>
 								<ul class="icons">
-									<li><a href="https://join.slack.com/t/vsechnovcloudu/shared_invite/enQtMzcwMjE4MTgxNjQ5LTNjOWVjZjIwNDMyYjI3YjU0NmI0MmI5YjQzZjMwNzMxNmQ5ZTJjYmYyMjAyMmU3MGZlMDRhYWQwMWJhMjIyMTY" class="icon fa-slack alt"><span class="label">Slack</span></a></li>
+									<li><a href="https://vsechnovcloudu.slack.com" class="icon fa-slack alt"><span class="label">Slack</span></a></li>
 									<li><a href="https://www.facebook.com/vsechnovcloudu/" class="icon fa-facebook alt"><span class="label">Facebook</span></a></li>
 									<li><a href="https://github.com/vsechnovcloudu" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
 									<li><a href="https://plus.google.com/u/0/b/104173399245736550114/" class="icon fa-google-plus alt"><span class="label">Google Plus</span></a></li>
