--- a/obchodnipodminky.html
+++ b/obchodnipodminky.html
@@ -85,6 +85,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 							<li><a href="https://vsechnovcloudu.slack.com" class="icon fa-slack alt"><span class="label">Slack</span></a></li>
 							<li><a href="https://www.facebook.com/vsechnovcloudu/" class="icon fa-facebook alt"><span class="label">Facebook</span></a></li>
 							<li><a href="https://github.com/vsechnovcloudu" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/company/vsechnovcloudu/" class="icon fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://plus.google.com/u/0/b/104173399245736550114/" class="icon fa-google-plus alt"><span class="label">Google Plus</span></a></li>
 							<li><a href="mailto:info@vsechnovcloudu.cz" class="icon fas fa-at alt"><span class="label">Email</span></a></li>
 						</ul>
