--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <html>
 	<head>
 		<title>Všechno v cloudu</title>
+		<meta name="google-site-verification" content="M97eJTNNwtKmAZYKrYTCaOMhEIK094txfsh9kALT3-c" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
