Moved contact down

--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
 <p>Terraform, Jenkins, NodeJS, AWS Lambda, AWS API Gateway, DynamoDB, AWS IAM, AWS SSM, AWS Cloudwatch</p>
 <iframe width="1257" height="785" src="https://www.youtube.com/embed/0J0xIScmn20" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<h1>Všechno v cloudu</h1>
+<h2>Kontakt</h2>
+
+<p><a href="mailto:david.kubec@vsechnovcloudu.cz">David.Kubec@vsechnovcloudu.cz</a> && || +420 731 128 030</p>
+<p>IČO 07081219 | <a href="mailto:info@vsechnovcloudu.cz"><i class="fas fa-envelope"></i> info@vsechnovcloudu.cz</a> | <a href="https://github.com/vsechnovcloudu"><i class="fab fa-github"></i> GitHub</a> | <a href="https://www.linkedin.com/company/vsechnovcloudu"><i class="fab fa-linkedin"></i> LinkedIN</a> | <a href="https://www.facebook.com/vsechnovcloudu/"><i class="fab fa-facebook"></i> Facebook</a></p>
+
 </body>
 </html>
