--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <img src = "src/img/logo.jpg" />
 
-<h1>Vše pro vývoj Vašeho produktu</h1>
+<h1>Všechno v cloudu</h1>
 <p>Pomáhám s výběrem cloud providera, vývojářských nástrojů a s designem pipeline.<br />Nabízím 5 let zkušeností s vývojem softwaru pro malé firmy i velké enterprise společnosti.</p>
 <p>Můj zákazník je někdo, kdo umí naprogramovat business logiku, ale neumí ji provozovat, případně ji provozuje blbě. Důvody se liší.</p>
 <li>v malých firmách chybí rozpočet</li>
@@ -29,11 +29,6 @@
 <p>Návrh cloudové migrace existujících produktů a zvýšení podílu automatizace.</p>
 <p>Školení developerů, operations v místě Vaší společnosti.</p>
 <p>Možnost osvěty pro management či netechnické publikum.</p>
-
-<h2>Kontakt</h2>
-
-<p><a href="mailto:david.kubec@vsechnovcloudu.cz">David.Kubec@vsechnovcloudu.cz</a> && || +420 731 128 030</p>
-<p>IČO 07081219 | <a href="mailto:info@vsechnovcloudu.cz"><i class="fas fa-envelope"></i> info@vsechnovcloudu.cz</a> | <a href="https://github.com/vsechnovcloudu"><i class="fab fa-github"></i> GitHub</a> | <a href="https://www.linkedin.com/company/vsechnovcloudu"><i class="fab fa-linkedin"></i> LinkedIN</a> | <a href="https://www.facebook.com/vsechnovcloudu/"><i class="fab fa-facebook"></i> Facebook</a></p>
 
 <h2>Ukázky práce</h2>
 
