Removed icon from header

--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 <link rel="stylesheet" type="text/css" href="src/css/all.css">
 <link rel="stylesheet" type="text/css" href="src/css/main.css">
 </head>
-<img src = "src/img/logo.jpg" />
-
 <h1>Všechno v cloudu</h1>
 <p>Pomáhám s výběrem cloud providera, vývojářských nástrojů a s designem pipeline.<br />Nabízím 5 let zkušeností s vývojem softwaru pro malé firmy i velké enterprise společnosti.</p>
 <p>Můj zákazník je někdo, kdo umí naprogramovat business logiku, ale neumí ji provozovat, případně ji provozuje blbě. Důvody se liší.</p>
@@ -59,7 +57,7 @@
 
 <h2>Kontakt</h2>
 
-<p><a href="mailto:david.kubec@vsechnovcloudu.cz">David.Kubec@vsechnovcloudu.cz</a> && || +420 731 128 030</p>
+<p><a href="mailto:david.kubec@vsechnovcloudu.cz">David.Kubec@vsechnovcloudu.cz</a> && || +420731128030</p>
 <p>IČO 07081219 | <a href="mailto:info@vsechnovcloudu.cz"><i class="fas fa-envelope"></i> info@vsechnovcloudu.cz</a> | <a href="https://github.com/vsechnovcloudu"><i class="fab fa-github"></i> GitHub</a> | <a href="https://www.linkedin.com/company/vsechnovcloudu"><i class="fab fa-linkedin"></i> LinkedIN</a> | <a href="https://www.facebook.com/vsechnovcloudu/"><i class="fab fa-facebook"></i> Facebook</a></p>
 
 </body>
