Fixed few typos

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cz">
+<html lang="cs">
 <head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144554773-1"></script>
@@ -11,13 +11,16 @@
 </script>
 <link rel="stylesheet" type="text/css" href="src/css/all.css">
 <link rel="stylesheet" type="text/css" href="src/css/main.css">
+<title>Všechno v cloudu</title>
 </head>
 <h1>Všechno v cloudu</h1>
 <p>Pomáhám s výběrem cloud providera, vývojářských nástrojů a s designem pipeline.<br />Nabízím 5 let zkušeností s vývojem softwaru pro malé firmy i velké enterprise společnosti.</p>
 <p>Můj zákazník je někdo, kdo umí naprogramovat business logiku, ale neumí ji provozovat, případně ji provozuje blbě. Důvody se liší.</p>
+<ul>
 <li>v malých firmách chybí rozpočet</li>
 <li>ve středních firmách chybí znalosti</li>
 <li>v těch velkých chybí vize</li>
+</ul>
 <p>Moje role je "Jack of all trades", umím od každého trochu, orientuji se v komplexním tématu technologií a nasměruji lidi správným směrem.</p>
 
 <h2>Nabízím konzultace</h2>
