--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <p><a href="https://github.com/vsechnovcloudu/k8s.deployment"><i class="fab fa-github"></i> GitHub - service</a></p>
 
 <h3>Slack integrace - výpis z AWS cloudu</h3>
-<p>Blueprint pro Slack integrace - základem je modul pro Lambda funkce a API gateway. Plně automatický build, test a deployment do prostředí definovaného pomocí větvě v Git repozitáři.</p>
+<p>Blueprint pro Slack integrace - základem je modul pro Lambda funkce a API gateway. Plně automatický build, test a deployment do prostředí definovaného pomocí větve v Git repozitáři.</p>
 <p>CircleCI, Terraform, AWS Lambda, AWS API Gateway, NodeJS</p>
 <a href="https://github.com/vsechnovcloudu/aws.listme"><img src="src/img/lister.gif" width="1257" /></a>
 <p><a href="https://github.com/vsechnovcloudu/aws.listme"><i class="fab fa-github"></i> GitHub</a></p>
