Fixed w3 validation issues

--- a/index.html
+++ b/index.html
@@ -37,20 +37,20 @@
 <h3>Kubernetes cluster + deployment služeb v Google Cloud Platform</h3>
 <p>Založení Kubernetes clusteru pomocí Terraformu, jeden cluster per projekt / prostředí. Založení a správa zdockerované aplikace pomocí Terraformu a deployment do libovolného prostředí.
 <p>Terraform, GitlabCI, Google Container Service</p>
-<a href="https://github.com/vsechnovcloudu/k8s.deployment"><img src="src/img/terraformkubernetesgitlab.gif" width="1257" /></a>
+<a href="https://github.com/vsechnovcloudu/k8s.deployment"><img src="src/img/terraformkubernetesgitlab.gif" width="1257" alt="animated gif showing gitlab ci" /></a>
 <p><a href="https://github.com/vsechnovcloudu/gcp.gkeHelmDemo"><i class="fab fa-github"></i> GitHub - infrastructure</a></p>
 <p><a href="https://github.com/vsechnovcloudu/k8s.deployment"><i class="fab fa-github"></i> GitHub - service</a></p>
 
 <h3>Slack integrace - výpis z AWS cloudu</h3>
 <p>Blueprint pro Slack integrace - základem je modul pro Lambda funkce a API gateway. Plně automatický build, test a deployment do prostředí definovaného pomocí větve v Git repozitáři.</p>
 <p>CircleCI, Terraform, AWS Lambda, AWS API Gateway, NodeJS</p>
-<a href="https://github.com/vsechnovcloudu/aws.listme"><img src="src/img/lister.gif" width="1257" /></a>
+<a href="https://github.com/vsechnovcloudu/aws.listme"><img src="src/img/lister.gif" width="1257" alt="animated gif showing lister app" /></a>
 <p><a href="https://github.com/vsechnovcloudu/aws.listme"><i class="fab fa-github"></i> GitHub</a></p>
 
 <h3>Generátor map pro dobrodružství s dětmi</h3>
 <p>Google Maps API, NodeJS, Nunjucks, AWS Lambda, AWS API Gateway, S3 website</p>
 <p>Automatické serverless generování stránek pomocí šablon. Výsledná stránka hostovaná serverless.</p>
-<a href="http://vvc.geoondemand.frontend.s3-website-eu-west-1.amazonaws.com/"><img src="src/img/geoanim.gif" width="1257" /></a>
+<a href="http://vvc.geoondemand.frontend.s3-website-eu-west-1.amazonaws.com/"><img src="src/img/geoanim.gif" width="1257" alt="animated gif showing geoondemand app" /></a>
 <p><a href="https://github.com/vsechnovcloudu/geoGameOnDemand"><i class="fab fa-github"></i> GitHub</a></p>
 <p><a href="http://vvc.geoondemand.frontend.s3-website-eu-west-1.amazonaws.com/">Try it!</a></p>
 
@@ -58,7 +58,7 @@
 <p>Prezentace Slack integrace umožňující privilegovaný přístup do strojů bez povoleného SSH (typicky produkční systémy) v AWS i mimo něj.</p>
 <p>Terraform, Jenkins, NodeJS, AWS Lambda, AWS API Gateway, DynamoDB, AWS IAM, AWS SSM, AWS Cloudwatch</p>
 <div class="iframe-container">
-  <iframe width="1257" height="785" src="https://www.youtube.com/embed/0J0xIScmn20" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="1257" height="785" src="https://www.youtube.com/embed/0J0xIScmn20" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 <h2>Kontakt</h2>
