Progressive color change

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </script>
 <link rel="stylesheet" type="text/css" href="src/css/all.css">
 <link rel="stylesheet" type="text/css" href="src/css/main.css">
+<link href="https://fonts.googleapis.com/css?family=Archivo|Tenor+Sans&display=swap" rel="stylesheet">
 <title>Všechno v cloudu</title>
 </head>
 <h1>Všechno v cloudu</h1>
@@ -63,8 +64,8 @@
 
 <h2>Kontakt</h2>
 
-<p><a href="mailto:david.kubec@vsechnovcloudu.cz">David.Kubec@vsechnovcloudu.cz</a> && || +420731128030</p>
-<p>IČO 07081219 | <a href="mailto:info@vsechnovcloudu.cz"><i class="fas fa-envelope"></i> info@vsechnovcloudu.cz</a> | <a href="https://github.com/vsechnovcloudu"><i class="fab fa-github"></i> GitHub</a> | <a href="https://www.linkedin.com/company/vsechnovcloudu"><i class="fab fa-linkedin"></i> LinkedIN</a> | <a href="https://www.facebook.com/vsechnovcloudu/"><i class="fab fa-facebook"></i> Facebook</a></p>
+<p><a href="mailto:david.kubec@vsechnovcloudu.cz">david.kubec@vsechnovcloudu.cz</a> && || +420731128030</p>
+<p><a href="mailto:info@vsechnovcloudu.cz"><i class="fas fa-envelope"></i> info@vsechnovcloudu.cz</a> | <a href="https://github.com/vsechnovcloudu"><i class="fab fa-github"></i> GitHub</a> | <a href="https://www.linkedin.com/company/vsechnovcloudu"><i class="fab fa-linkedin"></i> LinkedIN</a> | <a href="https://www.facebook.com/vsechnovcloudu/"><i class="fab fa-facebook"></i> Facebook</a></p>
 
 </body>
 </html>
