--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link href="https://fonts.googleapis.com/css?family=Archivo|Tenor+Sans&display=swap" rel="stylesheet">
 <title>Všechno v cloudu</title>
 </head>
-<h1>Všechno v cloudu</h1>
+<h1>Všechno<br />v cloudu</h1>
 <p>Pomáhám s výběrem cloud providera, vývojářských nástrojů a s designem pipeline.<br />Nabízím 5 let zkušeností s vývojem softwaru pro malé firmy i velké enterprise společnosti.</p>
 <p>Můj zákazník je někdo, kdo umí naprogramovat business logiku, ale neumí ji provozovat, případně ji provozuje blbě. Důvody se liší.</p>
 <ul>
@@ -23,41 +23,43 @@
 <li>ve středních firmách chybí znalosti</li>
 <li>v těch velkých chybí vize</li>
 </ul>
-<p>Moje role je "Jack of all trades", umím od každého trochu, orientuji se v komplexním tématu technologií a nasměruji lidi správným směrem.</p>
+<p>Moje role je „Jack of all trades“, umím od každého trochu, orientuji se v komplexním tématu technologií a nasměruji lidi správným směrem.</p>
 
-<h2>Nabízím konzultace</h2>
-<p>O možných cestách do cloudu i zpátky, zasvěcení do základní terminologie a principů automatizace.</p>
-<p>Návrh Vaší budoucí pipeline s využitím open source nástrojů s minimální cenou pro snadný rozjezd.</p>
-<p>Optimalizace stávajících procesů, ceny provozu a monitoringu existujícího produktu.
-<p>Návrh cloudové migrace existujících produktů a zvýšení podílu automatizace.</p>
-<p>Školení developerů, operations v místě Vaší společnosti.</p>
-<p>Možnost osvěty pro management či netechnické publikum.</p>
+<h2>Nabízím<br />konzultace</h2>
+<ul>
+<li>O možných cestách do cloudu i zpátky, zasvěcení do základní terminologie a principů automatizace.</li>
+<li>Návrh Vaší budoucí pipeline s využitím open source nástrojů s minimální cenou pro snadný rozjezd.</li>
+<li>Optimalizace stávajících procesů, ceny provozu a monitoringu existujícího produktu.</li>
+<li>Návrh cloudové migrace existujících produktů a zvýšení podílu automatizace.</li>
+<li>Školení developerů, operations v místě Vaší společnosti.</li>
+<li>Možnost osvěty pro management či netechnické publikum.</li>
+</ul>
 
-<h2>Ukázky práce</h2>
+<h2>Ukázky<br />práce</h2>
 
 <h3>Kubernetes cluster + deployment služeb v Google Cloud Platform</h3>
 <p>Založení Kubernetes clusteru pomocí Terraformu, jeden cluster per projekt / prostředí. Založení a správa zdockerované aplikace pomocí Terraformu a deployment do libovolného prostředí.
-<p>Terraform, GitlabCI, Google Container Service</p>
+<p><i>Terraform, GitlabCI, Google Container Service</i></p>
 <a href="https://github.com/vsechnovcloudu/k8s.deployment"><img src="src/img/terraformkubernetesgitlab.gif" width="1257" alt="animated gif showing gitlab ci" /></a>
-<p><a href="https://github.com/vsechnovcloudu/gcp.gkeHelmDemo"><i class="fab fa-github"></i> GitHub - infrastructure</a></p>
-<p><a href="https://github.com/vsechnovcloudu/k8s.deployment"><i class="fab fa-github"></i> GitHub - service</a></p>
+<p><a href="https://github.com/vsechnovcloudu/gcp.gkeHelmDemo"><i class="fab fa-github"></i> GitHub – infrastructure</a></p>
+<p><a href="https://github.com/vsechnovcloudu/k8s.deployment"><i class="fab fa-github"></i> GitHub – service</a></p>
 
-<h3>Slack integrace - výpis z AWS cloudu</h3>
-<p>Blueprint pro Slack integrace - základem je modul pro Lambda funkce a API gateway. Plně automatický build, test a deployment do prostředí definovaného pomocí větve v Git repozitáři.</p>
-<p>CircleCI, Terraform, AWS Lambda, AWS API Gateway, NodeJS</p>
+<h3>Slack integrace – výpis z AWS cloudu</h3>
+<p>Blueprint pro Slack integrace – základem je modul pro Lambda funkce a API gateway. Plně automatický build, test a deployment do prostředí definovaného pomocí větve v Git repozitáři.</p>
+<p><i>CircleCI, Terraform, AWS Lambda, AWS API Gateway, NodeJS</i></p>
 <a href="https://github.com/vsechnovcloudu/aws.listme"><img src="src/img/lister.gif" width="1257" alt="animated gif showing lister app" /></a>
 <p><a href="https://github.com/vsechnovcloudu/aws.listme"><i class="fab fa-github"></i> GitHub</a></p>
 
 <h3>Generátor map pro dobrodružství s dětmi</h3>
-<p>Google Maps API, NodeJS, Nunjucks, AWS Lambda, AWS API Gateway, S3 website</p>
 <p>Automatické serverless generování stránek pomocí šablon. Výsledná stránka hostovaná serverless.</p>
+<p><i>Google Maps API, NodeJS, Nunjucks, AWS Lambda, AWS API Gateway, S3 website</i></p>
 <a href="http://vvc.geoondemand.frontend.s3-website-eu-west-1.amazonaws.com/"><img src="src/img/geoanim.gif" width="1257" alt="animated gif showing geoondemand app" /></a>
 <p><a href="https://github.com/vsechnovcloudu/geoGameOnDemand"><i class="fab fa-github"></i> GitHub</a></p>
 <p><a href="http://vvc.geoondemand.frontend.s3-website-eu-west-1.amazonaws.com/">Try it!</a></p>
 
 <h3>Živé vystoupení na AWS Summit 2019 v Berlíně</h3>
 <p>Prezentace Slack integrace umožňující privilegovaný přístup do strojů bez povoleného SSH (typicky produkční systémy) v AWS i mimo něj.</p>
-<p>Terraform, Jenkins, NodeJS, AWS Lambda, AWS API Gateway, DynamoDB, AWS IAM, AWS SSM, AWS Cloudwatch</p>
+<p><i>Terraform, Jenkins, NodeJS, AWS Lambda, AWS API Gateway, DynamoDB, AWS IAM, AWS SSM, AWS Cloudwatch</i></p>
 <div class="iframe-container">
   <iframe width="1257" height="785" src="https://www.youtube.com/embed/0J0xIScmn20" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
