Progressive design in progress

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link href="https://fonts.googleapis.com/css?family=Archivo|Tenor+Sans&display=swap" rel="stylesheet">
 <title>Všechno v cloudu</title>
 </head>
-<h1>Všechno<br />v cloudu</h1>
+<h1><b>Všechno<br />v cloudu</b></h1>
 <p>Pomáhám s výběrem cloud providera, vývojářských nástrojů a s designem pipeline.<br />Nabízím 5 let zkušeností s vývojem softwaru pro malé firmy i velké enterprise společnosti.</p>
 <p>Můj zákazník je někdo, kdo umí naprogramovat business logiku, ale neumí ji provozovat, případně ji provozuje blbě. Důvody se liší.</p>
 <ul>
@@ -25,7 +25,7 @@
 </ul>
 <p>Moje role je „Jack of all trades“, umím od každého trochu, orientuji se v komplexním tématu technologií a nasměruji lidi správným směrem.</p>
 
-<h2>Nabízím<br />konzultace</h2>
+<h1>Nabízím<br />konzultace</h1>
 <ul>
 <li>O možných cestách do cloudu i zpátky, zasvěcení do základní terminologie a principů automatizace.</li>
 <li>Návrh Vaší budoucí pipeline s využitím open source nástrojů s minimální cenou pro snadný rozjezd.</li>
@@ -40,20 +40,20 @@
 <h3>Kubernetes cluster + deployment služeb v Google Cloud Platform</h3>
 <p>Založení Kubernetes clusteru pomocí Terraformu, jeden cluster per projekt / prostředí. Založení a správa zdockerované aplikace pomocí Terraformu a deployment do libovolného prostředí.
 <p><i>Terraform, GitlabCI, Google Container Service</i></p>
-<a href="https://github.com/vsechnovcloudu/k8s.deployment"><img src="src/img/terraformkubernetesgitlab.gif" width="1257" alt="animated gif showing gitlab ci" /></a>
+{# <a href="https://github.com/vsechnovcloudu/k8s.deployment"><img src="src/img/terraformkubernetesgitlab.gif" width="1257" alt="animated gif showing gitlab ci" /></a> #}
 <p><a href="https://github.com/vsechnovcloudu/gcp.gkeHelmDemo"><i class="fab fa-github"></i> GitHub – infrastructure</a></p>
 <p><a href="https://github.com/vsechnovcloudu/k8s.deployment"><i class="fab fa-github"></i> GitHub – service</a></p>
 
 <h3>Slack integrace – výpis z AWS cloudu</h3>
 <p>Blueprint pro Slack integrace – základem je modul pro Lambda funkce a API gateway. Plně automatický build, test a deployment do prostředí definovaného pomocí větve v Git repozitáři.</p>
 <p><i>CircleCI, Terraform, AWS Lambda, AWS API Gateway, NodeJS</i></p>
-<a href="https://github.com/vsechnovcloudu/aws.listme"><img src="src/img/lister.gif" width="1257" alt="animated gif showing lister app" /></a>
+{# <a href="https://github.com/vsechnovcloudu/aws.listme"><img src="src/img/lister.gif" width="1257" alt="animated gif showing lister app" /></a> #}
 <p><a href="https://github.com/vsechnovcloudu/aws.listme"><i class="fab fa-github"></i> GitHub</a></p>
 
 <h3>Generátor map pro dobrodružství s dětmi</h3>
 <p>Automatické serverless generování stránek pomocí šablon. Výsledná stránka hostovaná serverless.</p>
 <p><i>Google Maps API, NodeJS, Nunjucks, AWS Lambda, AWS API Gateway, S3 website</i></p>
-<a href="http://vvc.geoondemand.frontend.s3-website-eu-west-1.amazonaws.com/"><img src="src/img/geoanim.gif" width="1257" alt="animated gif showing geoondemand app" /></a>
+{# <a href="http://vvc.geoondemand.frontend.s3-website-eu-west-1.amazonaws.com/"><img src="src/img/geoanim.gif" width="1257" alt="animated gif showing geoondemand app" /></a> #}
 <p><a href="https://github.com/vsechnovcloudu/geoGameOnDemand"><i class="fab fa-github"></i> GitHub</a></p>
 <p><a href="http://vvc.geoondemand.frontend.s3-website-eu-west-1.amazonaws.com/">Try it!</a></p>
 
@@ -66,8 +66,10 @@
 
 <h2>Kontakt</h2>
 
-<p><a href="mailto:david.kubec@vsechnovcloudu.cz">david.kubec@vsechnovcloudu.cz</a> && || +420731128030</p>
-<p><a href="mailto:info@vsechnovcloudu.cz"><i class="fas fa-envelope"></i> info@vsechnovcloudu.cz</a> | <a href="https://github.com/vsechnovcloudu"><i class="fab fa-github"></i> GitHub</a> | <a href="https://www.linkedin.com/company/vsechnovcloudu"><i class="fab fa-linkedin"></i> LinkedIN</a> | <a href="https://www.facebook.com/vsechnovcloudu/"><i class="fab fa-facebook"></i> Facebook</a></p>
+<p><a href="mailto:david.kubec@vsechnovcloudu.cz">david.kubec@vsechnovcloudu.cz</a></p>
+<p>&& || +420 731 128 030</p>
+<p><a href="mailto:info@vsechnovcloudu.cz"><i class="fas fa-envelope"></i> info@vsechnovcloudu.cz</a></p>
+<p><a href="https://github.com/vsechnovcloudu"><i class="fab fa-github"></i> GitHub</a> | <a href="https://www.linkedin.com/company/vsechnovcloudu"><i class="fab fa-linkedin"></i> LinkedIN</a> | <a href="https://www.facebook.com/vsechnovcloudu/"><i class="fab fa-facebook"></i> Facebook</a></p>
 
 </body>
 </html>
