--- a/index.html
+++ b/index.html
@@ -40,20 +40,20 @@
 <h3>Kubernetes cluster + deployment služeb v Google Cloud Platform</h3>
 <p>Založení Kubernetes clusteru pomocí Terraformu, jeden cluster per projekt / prostředí. Založení a správa zdockerované aplikace pomocí Terraformu a deployment do libovolného prostředí.
 <p><i>Terraform, GitlabCI, Google Container Service</i></p>
-{# <a href="https://github.com/vsechnovcloudu/k8s.deployment"><img src="src/img/terraformkubernetesgitlab.gif" width="1257" alt="animated gif showing gitlab ci" /></a> #}
+<!-- <a href="https://github.com/vsechnovcloudu/k8s.deployment"><img src="src/img/terraformkubernetesgitlab.gif" width="1257" alt="animated gif showing gitlab ci" /></a> -->
 <p><a href="https://github.com/vsechnovcloudu/gcp.gkeHelmDemo"><i class="fab fa-github"></i> GitHub – infrastructure</a></p>
 <p><a href="https://github.com/vsechnovcloudu/k8s.deployment"><i class="fab fa-github"></i> GitHub – service</a></p>
 
 <h3>Slack integrace – výpis z AWS cloudu</h3>
 <p>Blueprint pro Slack integrace – základem je modul pro Lambda funkce a API gateway. Plně automatický build, test a deployment do prostředí definovaného pomocí větve v Git repozitáři.</p>
 <p><i>CircleCI, Terraform, AWS Lambda, AWS API Gateway, NodeJS</i></p>
-{# <a href="https://github.com/vsechnovcloudu/aws.listme"><img src="src/img/lister.gif" width="1257" alt="animated gif showing lister app" /></a> #}
+<!-- <a href="https://github.com/vsechnovcloudu/aws.listme"><img src="src/img/lister.gif" width="1257" alt="animated gif showing lister app" /></a>-->
 <p><a href="https://github.com/vsechnovcloudu/aws.listme"><i class="fab fa-github"></i> GitHub</a></p>
 
 <h3>Generátor map pro dobrodružství s dětmi</h3>
 <p>Automatické serverless generování stránek pomocí šablon. Výsledná stránka hostovaná serverless.</p>
 <p><i>Google Maps API, NodeJS, Nunjucks, AWS Lambda, AWS API Gateway, S3 website</i></p>
-{# <a href="http://vvc.geoondemand.frontend.s3-website-eu-west-1.amazonaws.com/"><img src="src/img/geoanim.gif" width="1257" alt="animated gif showing geoondemand app" /></a> #}
+<!-- <a href="http://vvc.geoondemand.frontend.s3-website-eu-west-1.amazonaws.com/"><img src="src/img/geoanim.gif" width="1257" alt="animated gif showing geoondemand app" /></a>-->
 <p><a href="https://github.com/vsechnovcloudu/geoGameOnDemand"><i class="fab fa-github"></i> GitHub</a></p>
 <p><a href="http://vvc.geoondemand.frontend.s3-website-eu-west-1.amazonaws.com/">Try it!</a></p>
 
