--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
 <h3>Živé vystoupení na AWS Summit 2019 v Berlíně</h3>
 <p>Prezentace Slack integrace umožňující privilegovaný přístup do strojů bez povoleného SSH (typicky produkční systémy) v AWS i mimo něj.</p>
 <p><i>Terraform, Jenkins, NodeJS, AWS Lambda, AWS API Gateway, DynamoDB, AWS IAM, AWS SSM, AWS Cloudwatch</i></p>
-<div class="iframe-container">
-  <iframe width="1257" height="785" src="https://www.youtube.com/embed/0J0xIScmn20" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
+<p><a href=https://www.youtube.com/embed/0J0xIScmn20""><i class="fab fa-youtube"></i> Youtube</a></p>
 
 <h1>Kontakt</h1>
 
