Aligned lines with links

--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
 <p>Založení Kubernetes clusteru pomocí Terraformu, jeden cluster per projekt / prostředí. Založení a správa zdockerované aplikace pomocí Terraformu a deployment do libovolného prostředí.
 <p><i>Terraform, GitlabCI, Google Container Service</i></p>
 <!-- <a href="https://github.com/vsechnovcloudu/k8s.deployment"><img src="src/img/terraformkubernetesgitlab.gif" width="1257" alt="animated gif showing gitlab ci" /></a> -->
-<p><a href="https://github.com/vsechnovcloudu/gcp.gkeHelmDemo"><i class="fab fa-github"></i> GitHub – infrastructure</a></p>
-<p><a href="https://github.com/vsechnovcloudu/k8s.deployment"><i class="fab fa-github"></i> GitHub – service</a></p>
+<p><a href="https://github.com/vsechnovcloudu/gcp.gkeHelmDemo"><i class="fab fa-github"></i> GitHub – infrastructure</a><br /><a href="https://github.com/vsechnovcloudu/k8s.deployment"><i class="fab fa-github"></i> GitHub – service</a></p>
 
 <h3>Slack integrace – výpis z AWS cloudu</h3>
 <p>Blueprint pro Slack integrace – základem je modul pro Lambda funkce a API gateway. Plně automatický build, test a deployment do prostředí definovaného pomocí větve v Git repozitáři.</p>
@@ -54,8 +53,7 @@
 <p>Automatické serverless generování stránek pomocí šablon. Výsledná stránka hostovaná serverless.</p>
 <p><i>Google Maps API, NodeJS, Nunjucks, AWS Lambda, AWS API Gateway, S3 website</i></p>
 <!-- <a href="http://vvc.geoondemand.frontend.s3-website-eu-west-1.amazonaws.com/"><img src="src/img/geoanim.gif" width="1257" alt="animated gif showing geoondemand app" /></a>-->
-<p><a href="https://github.com/vsechnovcloudu/geoGameOnDemand"><i class="fab fa-github"></i> GitHub</a></p>
-<p><a href="http://vvc.geoondemand.frontend.s3-website-eu-west-1.amazonaws.com/">Try it!</a></p>
+<p><a href="https://github.com/vsechnovcloudu/geoGameOnDemand"><i class="fab fa-github"></i> GitHub</a><br /><a href="http://vvc.geoondemand.frontend.s3-website-eu-west-1.amazonaws.com/">Try it!</a></p>
 
 <h3>Živé vystoupení na AWS Summit 2019 v Berlíně</h3>
 <p>Prezentace Slack integrace umožňující privilegovaný přístup do strojů bez povoleného SSH (typicky produkční systémy) v AWS i mimo něj.</p>
