--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link href="https://fonts.googleapis.com/css?family=Archivo|Tenor+Sans&display=swap" rel="stylesheet">
 <title>Všechno v cloudu</title>
 </head>
-<h1><b>Všechno<br />v cloudu</b></h1>
+<h1><b>Všechno<br />v&nbsp;cloudu</b></h1>
 <p>Pomáhám s výběrem cloud providera, vývojářských nástrojů a s designem pipeline.<br />Nabízím 5 let zkušeností s vývojem softwaru pro malé firmy i velké enterprise společnosti.</p>
 <p>Můj zákazník je někdo, kdo umí naprogramovat business logiku, ale neumí ji provozovat, případně ji provozuje blbě. Důvody se liší.</p>
 <ul>
@@ -43,19 +43,19 @@
 <!-- <a href="https://github.com/vsechnovcloudu/k8s.deployment"><img src="src/img/terraformkubernetesgitlab.gif" width="1257" alt="animated gif showing gitlab ci" /></a> -->
 <p><a href="https://github.com/vsechnovcloudu/gcp.gkeHelmDemo"><i class="fab fa-github"></i> GitHub – infrastructure</a><br /><a href="https://github.com/vsechnovcloudu/k8s.deployment"><i class="fab fa-github"></i> GitHub – service</a></p>
 
-<h3>Slack integrace – výpis z AWS cloudu</h3>
+<h3>Slack integrace<br />výpis z AWS cloudu</h3>
 <p>Blueprint pro Slack integrace – základem je modul pro Lambda funkce a API gateway. Plně automatický build, test a deployment do prostředí definovaného pomocí větve v Git repozitáři.</p>
 <p><i>CircleCI, Terraform, AWS Lambda, AWS API Gateway, NodeJS</i></p>
 <!-- <a href="https://github.com/vsechnovcloudu/aws.listme"><img src="src/img/lister.gif" width="1257" alt="animated gif showing lister app" /></a>-->
 <p><a href="https://github.com/vsechnovcloudu/aws.listme"><i class="fab fa-github"></i> GitHub</a></p>
 
-<h3>Generátor map pro dobrodružství s dětmi</h3>
+<h3>Generátor map<br />pro dobrodružství s dětmi</h3>
 <p>Automatické serverless generování stránek pomocí šablon. Výsledná stránka hostovaná serverless.</p>
 <p><i>Google Maps API, NodeJS, Nunjucks, AWS Lambda, AWS API Gateway, S3 website</i></p>
 <!-- <a href="http://vvc.geoondemand.frontend.s3-website-eu-west-1.amazonaws.com/"><img src="src/img/geoanim.gif" width="1257" alt="animated gif showing geoondemand app" /></a>-->
 <p><a href="https://github.com/vsechnovcloudu/geoGameOnDemand"><i class="fab fa-github"></i> GitHub</a><br /><a href="http://vvc.geoondemand.frontend.s3-website-eu-west-1.amazonaws.com/">Try it!</a></p>
 
-<h3>Živé vystoupení na AWS Summit 2019 v Berlíně</h3>
+<h3>Živé vystoupení<br />na AWS Summit 2019 v Berlíně</h3>
 <p>Prezentace Slack integrace umožňující privilegovaný přístup do strojů bez povoleného SSH (typicky produkční systémy) v AWS i mimo něj.</p>
 <p><i>Terraform, Jenkins, NodeJS, AWS Lambda, AWS API Gateway, DynamoDB, AWS IAM, AWS SSM, AWS Cloudwatch</i></p>
 <p><a href=https://www.youtube.com/embed/0J0xIScmn20""><i class="fab fa-youtube"></i> Youtube</a></p>
