Added some nbsp and aligned text

--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
 
 <h1>Nabízím<br />konzultace</h1>
 <ul>
-<li>O možných cestách do cloudu i zpátky, zasvěcení do základní terminologie a principů automatizace.</li>
-<li>Návrh Vaší budoucí pipeline s využitím open source nástrojů s minimální cenou pro snadný rozjezd.</li>
-<li>Optimalizace stávajících procesů, ceny provozu a monitoringu existujícího produktu.</li>
-<li>Návrh cloudové migrace existujících produktů a zvýšení podílu automatizace.</li>
+<li>O možných cestách do cloudu i zpátky, zasvěcení do základní terminologie a&nbsp;principů automatizace.</li>
+<li>Návrh Vaší budoucí pipeline s využitím open source nástrojů s minimální cenou pro&nbsp;snadnýrozjezd.</li>
+<li>Optimalizace stávajících procesů, ceny provozu a monitoringu existujícího&nbsp;produktu.</li>
+<li>Návrh cloudové migrace existujících produktů a zvýšení podílu&nbsp;automatizace.</li>
 <li>Školení developerů, operations v místě Vaší společnosti.</li>
 <li>Možnost osvěty pro management či netechnické publikum.</li>
 </ul>
 
 <h1>Ukázky<br />práce</h1>
 
-<h3>Kubernetes cluster + deployment služeb v Google Cloud Platform</h3>
+<h3>Kubernetes cluster + deployment služeb v Google&nbsp;Cloud&nbsp;Platform</h3>
 <p>Založení Kubernetes clusteru pomocí Terraformu, jeden cluster per projekt / prostředí. Založení a správa zdockerované aplikace pomocí Terraformu a deployment do libovolného prostředí.
 <p><i>Terraform, GitlabCI, Google Container Service</i></p>
 <!-- <a href="https://github.com/vsechnovcloudu/k8s.deployment"><img src="src/img/terraformkubernetesgitlab.gif" width="1257" alt="animated gif showing gitlab ci" /></a> -->
@@ -45,13 +45,13 @@
 
 <h3>Slack integrace<br />výpis z AWS cloudu</h3>
 <p>Blueprint pro Slack integrace – základem je modul pro Lambda funkce a API gateway. Plně automatický build, test a deployment do prostředí definovaného pomocí větve v Git repozitáři.</p>
-<p><i>CircleCI, Terraform, AWS Lambda, AWS API Gateway, NodeJS</i></p>
+<p><i>CircleCI, Terraform, AWS&nbsp;Lambda, AWS&nbsp;API&nbsp;Gateway, NodeJS</i></p>
 <!-- <a href="https://github.com/vsechnovcloudu/aws.listme"><img src="src/img/lister.gif" width="1257" alt="animated gif showing lister app" /></a>-->
 <p><a href="https://github.com/vsechnovcloudu/aws.listme"><i class="fab fa-github"></i> GitHub</a></p>
 
 <h3>Generátor map<br />pro dobrodružství s dětmi</h3>
 <p>Automatické serverless generování stránek pomocí šablon. Výsledná stránka hostovaná serverless.</p>
-<p><i>Google Maps API, NodeJS, Nunjucks, AWS Lambda, AWS API Gateway, S3 website</i></p>
+<p><i>Google Maps API, NodeJS, Nunjucks, AWS&nbsp;Lambda, AWS&nbsp;API&nbsp;Gateway, S3&nbsp;website</i></p>
 <!-- <a href="http://vvc.geoondemand.frontend.s3-website-eu-west-1.amazonaws.com/"><img src="src/img/geoanim.gif" width="1257" alt="animated gif showing geoondemand app" /></a>-->
 <p><a href="https://github.com/vsechnovcloudu/geoGameOnDemand"><i class="fab fa-github"></i> GitHub</a><br /><a href="http://vvc.geoondemand.frontend.s3-website-eu-west-1.amazonaws.com/">Try it!</a></p>
 
@@ -62,10 +62,9 @@
 
 <h1>Kontakt</h1>
 
-<p><a href="mailto:david.kubec@vsechnovcloudu.cz">david.kubec@vsechnovcloudu.cz</a></p>
-<p>&& || +420 731 128 030</p>
-<p><a href="mailto:info@vsechnovcloudu.cz"><i class="fas fa-envelope"></i> info@vsechnovcloudu.cz</a></p>
-<p><a href="https://github.com/vsechnovcloudu"><i class="fab fa-github"></i> GitHub</a> | <a href="https://www.linkedin.com/company/vsechnovcloudu"><i class="fab fa-linkedin"></i> LinkedIN</a> | <a href="https://www.facebook.com/vsechnovcloudu/"><i class="fab fa-facebook"></i> Facebook</a></p>
+<p><a href="mailto:david.kubec@vsechnovcloudu.cz"><i class="fas fa-envelope"></i> david.kubec@vsechnovcloudu.cz</a><br />&& || +420 731 128 030<br /><a href="https://github.com/vsechnovcloudu"><i class="fab fa-github"></i> GitHub</a> | <a href="https://www.linkedin.com/company/vsechnovcloudu"><i class="fab fa-linkedin"></i> LinkedIN</a> | <a href="https://www.facebook.com/vsechnovcloudu/"><i class="fab fa-facebook"></i> Facebook</a></p>
+
+<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
 </body>
 </html>
