--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <link href="https://fonts.googleapis.com/css?family=Archivo|Tenor+Sans&display=swap" rel="stylesheet">
 <title>Všechno v cloudu</title>
 </head>
+<img src="src/img/vvc-title.jpg" alt="title"/>
 <h1><b>Všechno<br />v&nbsp;cloudu</b></h1>
 <p>Pomáhám s výběrem cloud providera, vývojářských nástrojů a s designem pipeline.<br />Nabízím 5 let zkušeností s vývojem softwaru pro malé firmy i velké enterprise společnosti.</p>
 <p>Můj zákazník je někdo, kdo umí naprogramovat business logiku, ale neumí ji provozovat, případně ji provozuje blbě. Důvody se liší.</p>
