--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <li>ve středních firmách chybí znalosti</li>
 <li>v těch velkých chybí vize</li>
 </ul>
-<p>Moje role je „Jack of all trades“, umím od každého trochu, orientuji se v komplexním tématu technologií a nasměruji lidi správným směrem.</p>
+<p>Moje role je „Jack of all trades“, umím od každého trochu, orientuji se v&nbsp;komplexním tématu technologií a nasměruji lidi správným směrem.</p>
 
 <h1>Nabízím<br />konzultace</h1>
 <ul>
